# ges_iavoz

./: .clangd  .gitignore  .gitmodules  Kconfig.projbuild  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: add.cc.A8BFA69FAF1FA5E9.idx  (+398 more)
components/XMFCC/: CMakeLists.txt
components/ges_iavoz/: CMakeLists.txt  Kconfig.projbuild  UPC_Simon_i2cat_augmented.cc  UPC_simon_i2cat_augmented_2.cc  custom_conv_2_augmented.cc  ges_config.h  ges_connect.c  ges_connect.h  ges_events.c  ges_events.h  ges_iavoz.cc  ges_iavoz.h  ges_iavoz_audio_provider copy.cc  ges_iavoz_audio_provider.cc  ges_iavoz_audio_provider.h  ges_iavoz_audio_providerOLD.cc  ges_iavoz_command_recognizer.cc  ges_iavoz_command_recognizer.cc.bak  ges_iavoz_command_recognizer.h  ges_iavoz_command_recognizer.h.bak  ges_iavoz_command_responder.cc  ges_iavoz_command_responder.h  ges_iavoz_feature_provider.cc  ges_iavoz_feature_provider.h  ges_iavoz_main.cc  ges_iavoz_main.h  ges_iavoz_model_settings.h  ges_iavoz_vad.c  ges_iavoz_vad.h  marv  mobilnet_lola.cc  model.cc  model1.cc  model_150-lr0025epochs_data_augmented.cc  model_150-lr0025epochs_normal_last-version.cc  model_30-lr001epochs.cc  model_30-lr001epochs_cast.cc  model_30-lr001epochs_en_sheila.cc  model_30-lr001epochs_marvin_house_happy.cc  model_30-lr001epochs_marvin_house_happy_modificacions_edge.cc  (+20 more)
main/: CMakeLists.txt  main.c
old_models/: blinds_lite_I_large_conv_1_1.cc  custom_conv_3_unaugmented.cc  customconv_2_USI_augmented_longTraining.cc  customconv_2_USI_augmented_short.cc  largeconv_1_USI_augmented_shortTraining.cc  model_xavi.cc  switch_lite_I_conv.cc  switch_marvin_conv_10.cc  switch_marvin_conv_12.cc  switch_marvin_conv_2.cc  switch_marvin_conv_3.cc  switch_marvin_conv_9.cc
(+3 files in other folders)
